--- a/Practica01/Properties/Resources.resx
+++ b/Practica01/Properties/Resources.resx
@@ -118,6 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ConnectionString" xml:space="preserve">
-    <value>Data Source=CAMILA\SQLEXPRESS;Initial Catalog=commerce;Integrated Security=True</value>
+    <value>Data Source=CAMILA\SQLEXPRESS;Initial Catalog=Commerce;Integrated Security=True;Encrypt=False;TrustServerCertificate=True;
+</value>
   </data>
 </root>
